修复追踪菜单Java 17集合API兼容